style: fix wrong colors in icons.

--- a/web/assets/css/tailwind.css
+++ b/web/assets/css/tailwind.css
@@ -10,7 +10,11 @@
     @apply text-zinc-900 dark:text-zinc-50;
 }
 
+.invert {
+    @apply text-zinc-50 dark:text-zinc-900;
+}
+
 body {
-    @apply bg-zinc-50 dark:bg-zinc-950
+    @apply bg-zinc-50 dark:bg-zinc-950;
 }
 
